--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <hr />
     <p>Enter "Rock", "Paper", or "Scissors" and see who wins!</p>
     <!-- <form> -->
-    <label for="user1">User #1:</label><br />
+    <label for="user1">Hand One:</label><br />
     <input
       type="text"
       id="user1"
       name="user1"
       onkeyup="updateHandOne(this)"
     /><br />
-    <label for="user2">User #2:</label><br />
+    <label for="user2">Hand Two:</label><br />
     <input type="text" id="user2" name="user2" onkeyup="updateHandTwo(this)" />
     <!-- </form> -->
     <div id="display-element"></div>
